kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 20017
      protocol: TCP
  selector:
    app: mongodb
  
---

apiVersion: v1
kind: Service
metadata:
  name: tete
spec:
  selector:
    app: tete
  ports:
    - port: 8080
  type: LoadBalancer
