kubernetes/review-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: 051216/review-service:1.0.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: review-service
