kubernetes/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

    ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  rules:
    - host: mohan-ms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /rev
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 8080
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
