kubernetes/ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    -  host: "k8demo.com"
       http:
         paths:
           - pathType: Prefix
             path: "/product/v1"
             backend:
               service:
                 name: product-service
                 port:
                   number: 8080
           - pathType: Prefix
             path: "/product/v2"
             backend:
               service:
                 name: product-service
                 port:
                   number: 8080

    - host: "api.k8demo-v1.com"
      http:
        paths:
          - pathType: Prefix
            path: "/review"
            backend:
              service:
                name: review-service
                port:
                  number: 8080

    - host: "api.k8demo-v2.com"
      http:
        paths:
          - pathType: Prefix
            path: "/review"
            backend:
              service:
                name: review-service
                port:
                  number: 8080
