kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
    - host: mohan-ms.com
      http:
        paths:
          - pathType: Prefix
            path: /review
            backend:
              service:
                name: review-service
                port:
                  number: 8082
          - pathType: Prefix
            path: /product
            backend:
              service:
                name: product-service
                port:
                  number: 8080
